--- a/src/plugins/fakevim/fakevimoptions.ui
+++ b/src/plugins/fakevim/fakevimoptions.ui
@@ -159,6 +159,20 @@
         <item row="0" column="1">
          <widget class="QCheckBox" name="checkBoxSmartIndent"/>
         </item>
+        <item row="10" column="0">
+         <widget class="QLabel" name="labelUseCoreSearch">
+          <property name="text">
+           <string>Use search dialog:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="10" column="1">
+         <widget class="QCheckBox" name="checkBoxUseCoreSearch">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
