QmlDesigner: unifiyng style (BAUHAUS-564)

--- a/src/plugins/qmldesigner/components/resources/stylesheet.css
+++ b/src/plugins/qmldesigner/components/resources/stylesheet.css
@@ -126,6 +126,7 @@ QTabBar::tab {
     padding-right: 12px;
     padding-left: 12px;
     font: bold;
+	font-size: 11px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
     stop: 0 #3c3c3c, stop: 1 #444444);
 
