--- a/src/plugins/qmldesigner/settingspage.ui
+++ b/src/plugins/qmldesigner/settingspage.ui
@@ -6,36 +6,142 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>494</width>
-    <height>467</height>
+    <width>433</width>
+    <height>428</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" rowspan="2" colspan="3">
-    <widget class="QCheckBox" name="snapToGridCheckbox">
-     <property name="text">
-      <string>&amp;Snap to guides</string>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="2" column="0">
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Files</string>
      </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="3">
-    <widget class="QCheckBox" name="showBoundingRectanglesCheckbox">
-     <property name="text">
-      <string>Show &amp;bounding rectangles</string>
-     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QLabel" name="editorModeLabel">
+        <property name="text">
+         <string>Open file in:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="editorModeComboBox">
+        <item>
+         <property name="text">
+          <string>Design mode</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Edit mode</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="3" column="0">
-    <widget class="QCheckBox" name="onlyShowItemsWithContentsCheckBox">
-     <property name="text">
-      <string>Only select items with content</string>
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="title">
+      <string>Snapping</string>
      </property>
+     <layout class="QGridLayout" name="gridLayout_6">
+      <property name="margin">
+       <number>9</number>
+      </property>
+      <item row="0" column="0">
+       <layout class="QGridLayout" name="gridLayout_4">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>2</number>
+        </property>
+        <property name="rightMargin">
+         <number>2</number>
+        </property>
+        <property name="bottomMargin">
+         <number>2</number>
+        </property>
+        <property name="horizontalSpacing">
+         <number>20</number>
+        </property>
+        <item row="0" column="1">
+         <widget class="QLabel" name="itemSpacingLabel">
+          <property name="text">
+           <string>Item spacing</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QSpinBox" name="spinItemSpacing">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>50</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="snapMarginLabel">
+          <property name="text">
+           <string>Snap margin</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QSpinBox" name="spinSnapMargin">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>10</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="0" column="1">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="4" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -48,45 +154,8 @@
      </property>
     </spacer>
    </item>
-   <item row="4" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
-     <property name="spacing">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="editorModeLabel">
-       <property name="text">
-        <string>Open file in:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="editorModeComboBox">
-       <item>
-        <property name="text">
-         <string>Design mode</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Edit mode</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-    </layout>
-   </item>
   </layout>
  </widget>
- <tabstops>
-  <tabstop>snapToGridCheckbox</tabstop>
-  <tabstop>showBoundingRectanglesCheckbox</tabstop>
-  <tabstop>onlyShowItemsWithContentsCheckBox</tabstop>
-  <tabstop>editorModeComboBox</tabstop>
- </tabstops>
  <resources/>
  <connections/>
 </ui>
