--- a/src/plugins/qmldesigner/components/stateseditor/stateseditor.qrc
+++ b/src/plugins/qmldesigner/components/stateseditor/stateseditor.qrc
@@ -1,5 +1,6 @@
 <RCC>
-    <qresource prefix="/stateseditor" >
+    <qresource prefix="/stateseditor">
         <file>stateslist.qml</file>
+        <file>HorizontalScrollBar.qml</file>
     </qresource>
 </RCC>
